--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
@@ -11,7 +15,7 @@ p{
     font-family: lato,regular;
     color: #38456E;
     line-height: 18px;
-}
+} 
 a{
   color: white;
   font-family: lato;
