--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,6 +16,11 @@ p{
     color: #38456E;
     line-height: 18px;
 } 
+.font-title-up{
+  font-size: 16px;
+  color: white;
+  font-weight: 100;
+}
 a{
   color: white;
   font-family: lato;
@@ -28,8 +33,11 @@ a:hover {
 
 .psectionitems{
   font-weight: bold;
-  color: #38456E;
-  font-size: 23px;
+    color: #38456E;
+    width: 210px;
+    font-size: 30px;
+    line-height: 1.339em;
+    text-align: center;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -53,6 +61,8 @@ i.fa:hover {
 .text-light {
   color: #f8f9fa!important;
   font-weight: 700;
+  font-size: 37px;
+    line-height: 1.3em;
 }
 .background-hero{
   background-image: url('/img/seccitionOne.jpg') ;
@@ -64,6 +74,7 @@ i.fa:hover {
   left: 0;
   font-weight: 600;
 }
+
 .imglogo{
   width: 174px;
   height: 100%;
@@ -73,15 +84,23 @@ a.nav-link{
   font-size: 14px;
 }
 .letter-lato{
+  padding-top: 20px;
   font-family: 'Lato', sans-serif;
   font-size: 14px;
+  padding-bottom: 30px;
+
+}
+.font-title-section-two{
+  font-size: 34px;
+    line-height: 1.300em;
+    text-align: center;
 }
 .subtitle{
-  font-size: 27px;
-    font-weight: 600;
-    color: #3D5C9A;
-    padding-top: 20px;
-    line-height:35px;
+  font-size: 37px;
+  font-weight: 600;
+  color: #3D5C9A;
+  padding-top: 20px;
+  line-height: 37px;
 }
 .text-hero {
   padding-top: 110px;
@@ -136,7 +155,7 @@ a.nav-hover:hover {
   width: 100px;
 }
 .btn-app{
-  width: 88px;
+  width: 100%;
 }
 .btn-app-section-two{
   width: 100%;
@@ -145,7 +164,13 @@ a.nav-hover:hover {
      width: 117px;
       height: 3px;
       background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgb(69, 216, 125) 94%, rgb(69, 209, 122) 100%);
-  
+      margin-bottom: 28px;
+}
+.subtitle-construye{
+  font-size: 27px;
+    line-height: 37px;
+    font-weight: bold;
+    color: #3D5C9A;
 }
 
 .btn-download{
@@ -205,7 +230,11 @@ a.nav-hover:hover {
   width: 350px;
   margin-left: 25px;
   background: linear-gradient(to right, rgb(84, 189, 116) 0%, rgb(51, 181, 115) 21%, rgb(50, 218, 133) 100%);
-    
+  font-size: 18px;
+  font-weight: bold;
+  padding: 17px;
+  box-shadow: 1px 8px 46px 8px rgba(136, 255, 189, 0.44);
+      
 }
 .btn-download-mate{
   width: 240px;
@@ -366,6 +395,15 @@ a.nav-hover:hover {
 
 
 @media only screen and (max-width: 2000px) {
+  .background-secon-hero{
+    background-image: url('/img/hero_der.png');
+    padding-left: 0;
+    padding-right: 0;
+    background-repeat: no-repeat;
+    background-size: inherit;
+    position: relative;
+    background-position: right;
+  }
   .padding-hero{
     padding-left: 0;
     padding-right: 0;
@@ -663,16 +701,17 @@ a.nav-hover:hover {
 
 .subtitle-card{
   border-bottom: 3px solid #2ed887;
-  width: 90px;
+  width: 112px;
   padding-bottom: 5px;
   margin: auto;
 }
 .text-margin{
   padding-left: 5px;
   padding-right: 5px;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 100;
-  line-height: 18px;
+  line-height: 27px;
+    margin-bottom: 10px;
   margin-bottom: 10px;
   margin-left: -5px;
   font-family: lato-light;
@@ -756,12 +795,25 @@ a.nav-hover:hover {
   color: #34d977;
   border-color: white;
 }
+.display-on-mobile{
+  display:none;
+}
 }
 
 
 
 
 @media only screen and (max-width: 600px) {
+  .background-secon-hero{
+    background-image:none;
+    padding-left: 0;
+  }
+  .display-on-desktop{
+    display:none;
+  }
+  .display-on-mobile{
+    display:flex;
+  }
   .card-month-one {
    
     margin-left: 0;
