--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,7 @@ p{
   font-size: 14px;
     font-family: lato,regular;
     color: #38456E;
-    line-height: 18px;
+    line-height: 21px;
 } 
 .font-title-up{
   font-size: 16px;
@@ -38,6 +38,7 @@ a:hover {
     font-size: 30px;
     line-height: 1.339em;
     text-align: center;
+    margin: auto;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -88,6 +89,8 @@ a.nav-link{
   font-family: 'Lato', sans-serif;
   font-size: 14px;
   padding-bottom: 30px;
+  line-height: 22px;
+    font-weight: lighter;
 
 }
 .font-title-section-two{
@@ -182,6 +185,7 @@ a.nav-hover:hover {
   background-color: #45d87d;
   color:white;
 }
+
 
 
 
@@ -487,6 +491,8 @@ a.nav-hover:hover {
     font-size: 20px;
     font-weight: bold;
     color: #2ED183;
+    padding-top: 15px;
+    margin-bottom: 0;
     
   }
   .padding-cowork{
@@ -704,6 +710,7 @@ a.nav-hover:hover {
   width: 112px;
   padding-bottom: 5px;
   margin: auto;
+     
 }
 .text-margin{
   padding-left: 5px;
@@ -804,6 +811,19 @@ a.nav-hover:hover {
 
 
 @media only screen and (max-width: 600px) {
+  .subtitle-card{
+    
+    margin: auto;
+        margin-bottom: 10px;
+  }
+  .btn-store {
+    width: 150px;
+    height: 100%;
+}
+.btn-app {
+  width: 100%;
+  height: 100%;
+}
   .background-secon-hero{
     background-image:none;
     padding-left: 0;
